Updated Labkids and HandShot

--- a/_posts/2022-08-14-랩키드 시즌5.md
+++ b/_posts/2022-08-14-랩키드 시즌5.md
@@ -2,18 +2,95 @@
 layout: post
 title: 랩키드 시즌5 - 2021년도 실감교육 콘텐츠 개발 지원 과제
 date: 2022-08-14 22:30 +0900
+category: [(주)듀코젠 프로젝트]
 ---
 
 이 프로젝트는 정보통산산업진흥원(NIPA)에서 올린 2021년도 실감교육 콘텐츠 개발 지원 과제 공고에 따른 프로젝트로, 12개의 콘텐츠 중 일부를 개발했습니다.
 
-Step1 : 튜토리얼
+기간: 2021.07 ~ 2022.05
 
-![img-description](/assets/Labkid5Images/STEP1.png){: .left w="250" h="200"}
+업무내용:
 
-![img-description](/assets/Labkid5Images/STEP1.png){: .left w="250" h="200"}
+- 콘텐츠 개발
+- 최적화(프레임 개선: 30fps to 50fps / 빌드 파일 용량 개선: 1.7GB to 1.1GB)
+- 유지 보수
 
-![img-description](/assets/Labkid5Images/STEP1.png){: .left w="250" h="200"}
+​     
 
-_튜토리얼 중, 자신의 직업 적성 찾기_
+## Step1: 튜토리얼
 
-asdfgfsdfgsdfgsdfgsdfgsdfgsdfgsdfgsdfg;lksjdfglkjsdlfgl;lkl;js;dfgl;;k;;jlslgkjs;dl;k;gjlfs;dljf;g;lskdj;flg;slkd;jlfg;lsdk;j;fg;;l;sdkf;jgl;k
+![img-description](/assets/Labkid5Images/STEP1.png){: .right w="250" h="200"}
+
+![img-description](/assets/Labkid5Images/Step1_2.png){: .right w="250" h="200"}  
+
+![img-description](/assets/Labkid5Images/Step1_3.png){: .right w="250" h="200"}
+
+[영상 링크](https://vimeo.com/705598962/2a4c913ce6)
+
+- 컨트롤러 조작법을 익히는 전반적인 플레이 제작
+- 간단한 테스트롤 통해 사용자의 성향을 입력받고 이를 그래프로 표현(실시간으로 7각형 메쉬 생성)
+
+​     
+
+## Step4: 해부학 교실
+
+![img-description](/assets/Labkid5Images/Step4_1.png){: .right w="250" h="200"}
+
+![img-description](/assets/Labkid5Images/Step4_2.png){: .right w="250" h="200"}
+
+![img-description](/assets/Labkid5Images/Step4_3.png){: .right w="250" h="200"}
+
+[영상 링크](https://vimeo.com/725162608/54b6e3c2fe)
+
+- 해부학 교실 콘텐츠 전체 제작(배설계, 호흡계, 골격계, 순환계, 신경계, 소화계, 근육계)
+- 컨트롤러의 엄지스틱 버튼으로 4가지 활동(Talk: 설명 / Move: 움직임 관찰 / Cut: 단면 관찰 / Exp: 실험) 구현
+- Blend Shape, URP 렌더 피처, 림라이트 셰이더 등 다양한 요소 구현
+- 벡터 내적, 외적을 이용한 컨트롤러로 인체 모형 회전 기능 구현
+
+​     
+
+## Step5-3: 무의식 환자 간호
+
+![img-description](/assets/Labkid5Images/Step5-3_1.png){: .right w="250" h="200"}
+
+![img-description](/assets/Labkid5Images/Step5-3_2.png){: .right w="250" h="200"}
+
+![img-description](/assets/Labkid5Images/Step5-3_3.png){: .right w="250" h="200"}
+
+[영상 링크](https://vimeo.com/705598708/86e531fe6b)
+
+- 무의식 환자 간호하기 콘텐츠 전체 제작
+- 호스 구현을 위해 1자 디졸브 셰이더 제작
+- 주사용수 호스를 위해 Bezier Curve, Line Renderer, Hinge joint 등 활용
+
+​     
+
+## Step5-7 다빈치 실습
+
+![img-description](/assets/Labkid5Images/Step5-7_1.png){: .right w="250" h="200"}
+
+![img-description](/assets/Labkid5Images/Step5-7_2.png){: .right w="250" h="200"}
+
+![img-description](/assets/Labkid5Images/Step5-7_3.png){: .right w="250" h="200"}
+
+[영상 링크](https://vimeo.com/705598870/307c6ced65)
+
+- 다빈치 수술로봇 튜토리얼 콘텐츠 전체 제작
+- 양손의 엄지스틱으로 로봇팔의 도구들을 선택하는 기능 구현
+- Blend Shape를 이용한 포도알 껍질 벗기기 구현
+
+​     
+
+## Step6 심장 이식 수술 실습
+
+![img-description](/assets/Labkid5Images/Step6_1.png){: .right w="250" h="200"}
+
+![img-description](/assets/Labkid5Images/Step6_2.png){: .right w="250" h="200"}
+
+![img-description](/assets/Labkid5Images/Step6_3.png){: .right w="250" h="200"}
+
+[영상 링크](https://vimeo.com/705632302/c11cabe7eb)
+
+- 심장 이식 수술 실습 콘텐츠 전체 제작
+- 양손의 엄지스틱으로 로봇팔의 도구들을 선택 및 절개, 봉합 기능 구현
+- Unity Animation Rigging을 활용한 Animator에 종속되지 않는 본의 움직임으로 보조의의 심장 제거 및 인공심폐기의 호스 구현
