Fixed Link Misstyping

--- a/_posts/2022-08-14-Hand Shot.md
+++ b/_posts/2022-08-14-Hand Shot.md
@@ -76,5 +76,5 @@ category: [개인 프로젝트]
 - 주먹: 파란색 총알 발사
 - 검지: 빨간색 총알 발사
 - V: 초록색 총알 발사
-  [GestureCatcher.cs 소스 코드 링크]([https://github.com/OverHeatHeart/Unity_Yolo/blob/master/Unity_Darknet_Game/Assets/%5B01%5D%20Scripts/GestureCatcher.cs](https://github.com/OverHeatHeart/Unity_Yolo/blob/master/Unity_Darknet_Game/Assets/[01] Scripts/GestureCatcher.cs))
+  [GestureCatcher.cs 소스 코드 링크](https://github.com/OverHeatHeart/Unity_Yolo/blob/master/Unity_Darknet_Game/Assets/%5B01%5D%20Scripts/GestureCatcher.cs)
 
