--- a/_posts/2022-08-14-경기 자동차 과학고.md
+++ b/_posts/2022-08-14-경기 자동차 과학고.md
@@ -14,15 +14,21 @@ category: [(주)듀코젠 프로젝트]
 - 콘텐츠 개발
 - 3종의 콘텐츠 중, 차체 용접 콘텐츠 개발
 
-
+   
 
 ## 차체 용접
 
-![img-description](/assets/CarImages/Car1.png){: .right w="250" h="200"}
+![](/assets/CarImages/Car1.png){: .right w="250" h="200"}   
 
-![img-description](/assets/CarImages/Car2.png){: .right w="250" h="200"}
+![](/assets/CarImages/Car2.png){: .right w="250" h="200"}  
 
-![img-description](/assets/CarImages/Car3.png){: .right w="250" h="200"}
+![](/assets/CarImages/Car3.png){: .right w="250" h="200"}  
+
+    
+
+  
+
+
 
 [영상 링크](https://vimeo.com/506034022/6b6225c5c1)
 
