--- a/_posts/2022-08-14-경기 자동차 과학고.md
+++ b/_posts/2022-08-14-경기 자동차 과학고.md
@@ -14,19 +14,11 @@ category: [(주)듀코젠 프로젝트]
 - 콘텐츠 개발
 - 3종의 콘텐츠 중, 차체 용접 콘텐츠 개발
 
-   
-
 ## 차체 용접
 
-![](/assets/CarImages/Car1.png){: .right w="250" h="200"}   
-
-![](/assets/CarImages/Car2.png){: .right w="250" h="200"}  
-
-![](/assets/CarImages/Car3.png){: .right w="250" h="200"}  
-
-    
-
-  
+| ![](/assets/CarImages/Car1.png){: .left w="250" h="200"} | ![](/assets/CarImages/Car2.png){: .left w="250" h="200"} | ![](/assets/CarImages/Car3.png){: .left w="250" h="200"} |
+| :------------------------------------------------------: | :------------------------------------------------------: | :------------------------------------------------------: |
+|                         퀴즈머신                         |                         그라인더                         |                           용접                           |
 
 
 
