--- a/_posts/2022-08-14-랩키드 시즌1.md
+++ b/_posts/2022-08-14-랩키드 시즌1.md
@@ -17,11 +17,9 @@ category: [(주)듀코젠 프로젝트]
 
 ## 교육학술정보원 흥 앱에 탑재
 
-![img-description](/assets/Labkid1Images/Heung1.jpg){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid1Images/Heung2.jpg){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid1Images/Heung3.jpg){: .right w="250" h="200"}
+| ![img-description](/assets/Labkid1Images/Heung1.jpg){: .right w="250" h="200"} | ![img-description](/assets/Labkid1Images/Heung2.jpg){: .right w="250" h="200"} | ![img-description](/assets/Labkid1Images/Heung3.jpg){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| '흥'앱                                                       | '흥'앱                                                       | '흥'앱                                                       |
 
 - 에셋 번들화
 - 최적화
@@ -30,11 +28,9 @@ category: [(주)듀코젠 프로젝트]
 
 ### 1. 열의 이동 대류
 
-![img-description](/assets/Labkid1Images/Convec_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid1Images/Convec_2.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid1Images/Convec_3.png){: .right w="250" h="200"}
+| ![img-description](/assets/Labkid1Images/Convec_1.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid1Images/Convec_2.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid1Images/Convec_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 시작 씬                                                      | 대류 실험 도구                                               | 열변색 잉크 셰이더                                           |
 
 [영상 링크](https://vimeo.com/459322967/cf31a27791)
 
@@ -45,11 +41,9 @@ category: [(주)듀코젠 프로젝트]
 
 ### 2. 열의 이동 전도
 
-![img-description](/assets/Labkid1Images/Conduc_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid1Images/Conduc_2.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid1Images/Conduc_3.png){: .right w="250" h="200"}
+| ![img-description](/assets/Labkid1Images/Conduc_1.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid1Images/Conduc_2.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid1Images/Conduc_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 열화상 카메라                                                | 금속 막대                                                    | 전도 실험                                                    |
 
 [영상 링크](https://vimeo.com/459323043/ff00769576)
 
@@ -61,11 +55,9 @@ category: [(주)듀코젠 프로젝트]
 
 ### 3. 자유 낙하 실험
 
-![img-description](/assets/Labkid1Images/Gali_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid1Images/Gali_2.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid1Images/Gali_3.png){: .right w="250" h="200"}
+| ![img-description](/assets/Labkid1Images/Gali_1.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid1Images/Gali_2.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid1Images/Gali_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 진공 상태에서 떨어뜨리기                                     | 공기 저항상태에서 떨어뜨리기                                 | 달에서 실험하기                                              |
 
 [영상 링크](https://vimeo.com/459322476/b8d2eb2d4f)
 
@@ -75,11 +67,9 @@ category: [(주)듀코젠 프로젝트]
 
 ### 4. 과산화수소 분해 실험
 
-![img-description](/assets/Labkid1Images/Hydro_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid1Images/Hydro_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid1Images/Hydro_1.png){: .right w="250" h="200"}
+| ![img-description](/assets/Labkid1Images/Hydro_1.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid1Images/Hydro_2.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid1Images/Hydro_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 과산화수소 화산실험                                          | 실험 도구                                                    | 염화코발트 종이 확인                                         |
 
 [영상 링크](https://vimeo.com/459322558/67f63a6dfb)
 
@@ -90,11 +80,9 @@ category: [(주)듀코젠 프로젝트]
 
 ### 5. 물의 상태 변화
 
-![img-description](/assets/Labkid1Images/Water_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid1Images/Water_2.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid1Images/Water_3.png){: .right w="250" h="200"}
+| ![img-description](/assets/Labkid1Images/Water_1.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid1Images/Water_2.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid1Images/Water_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 대기 수분 순환                                               | 실험 도구                                                    | 물 끓이고 냉각시키기                                         |
 
 [영상 링크](https://vimeo.com/459322620/8ec225577b)
 
@@ -104,13 +92,11 @@ category: [(주)듀코젠 프로젝트]
 
 ### 6. 아이오딘의 상태 변화
 
-![img-description](/assets/Labkid1Images/Iodin_1.png){: .right w="250" h="200"}
+| ![img-description](/assets/Labkid1Images/Iodin_1.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid1Images/Iodin_2.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid1Images/Iodin_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 드라이아이스 승화 실험                                       | 실험 도구                                                    | 아이오딘 승화 실험                                           |
 
-![img-description](/assets/Labkid1Images/Iodin_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid1Images/Iodin_1.png){: .right w="250" h="200"}
-
-[영상 링크](https://vimeo.com/459322771/11f2113982)
+https://vimeo.com/459322771/11f2113982)
 
 - VR에서 Mobile 및 WebGL로 재개발
 
@@ -118,11 +104,9 @@ category: [(주)듀코젠 프로젝트]
 
 ### 7. 혼합물의 분리1
 
-![img-description](/assets/Labkid1Images/Mix1_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid1Images/Mix1_2.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid1Images/Mix1_3.png){: .right w="250" h="200"}
+| ![img-description](/assets/Labkid1Images/Mix1_1.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid1Images/Mix1_2.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid1Images/Mix1_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 온도에 따른 증류                                             | 실험 도구                                                    | 분리된 혼합물 검증                                           |
 
 [영상 링크](https://vimeo.com/459322848/64e995110b)
 
@@ -134,11 +118,9 @@ category: [(주)듀코젠 프로젝트]
 
 ### 8. 혼합물의 분리2
 
-![img-description](/assets/Labkid1Images/Mix2_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid1Images/Mix2_2.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid1Images/Mix2_3.png){: .right w="250" h="200"}
+| ![img-description](/assets/Labkid1Images/Mix2_1.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid1Images/Mix2_2.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid1Images/Mix2_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 상하수도 시설                                                | 실험 도구                                                    | 여과된 혼합물 검증                                           |
 
 [영상 링크](https://vimeo.com/459322931/f75a9e2edf)
 
@@ -148,11 +130,9 @@ category: [(주)듀코젠 프로젝트]
 
 ### 9. 실험실 안전
 
-![img-description](/assets/Labkid1Images/Safe_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid1Images/Safe_2.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid1Images/Safe_3.png){: .right w="250" h="200"}
+| ![img-description](/assets/Labkid1Images/Safe_1.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid1Images/Safe_2.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid1Images/Safe_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 소화기 등 실험실 확인                                        | 실험실 내 이동                                               | 안전 수칙                                                    |
 
 [영상 링크](https://vimeo.com/459323113/d72f7921dc)
 
