--- a/_posts/2022-08-14-랩키드 시즌3.md
+++ b/_posts/2022-08-14-랩키드 시즌3.md
@@ -15,11 +15,9 @@ category: [(주)듀코젠 프로젝트]
 
 ## 에피소드 6: 멘탈 케어
 
-![img-description](/assets/Labkid3Images/Mental_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid3Images/Mental_2.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid3Images/Mental_3.png){: .right w="250" h="200"}
+| ![img-description](/assets/Labkid3Images/Mental_1.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid3Images/Mental_2.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid3Images/Mental_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 타임라인                                                     | 애니메이션 블렌딩                                            | 타임스케일                                                   |
 
 [영상 링크(00:37 ~ 01:46)](https://vimeo.com/599334109/e3dcf225f3)
 
