--- a/_posts/2022-08-14-랩키드 시즌4.md
+++ b/_posts/2022-08-14-랩키드 시즌4.md
@@ -19,11 +19,9 @@ category: [(주)듀코젠 프로젝트]
 
 ## 스마트 팩토리: 클라우드 플랫폼 전문가
 
-![img-description](/assets/Labkid4Images/Clouder_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid4Images/Clouder_2.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid4Images/Clouder_3.png){: .right w="250" h="200"}
+| ![img-description](/assets/Labkid4Images/Clouder_1.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid4Images/Clouder_2.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid4Images/Clouder_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 공정 스캔                                                    | 다른 요원 지원                                               | UI 퍼즐 콘텐츠                                               |
 
 [영상 링크](https://vimeo.com/487525291/1d26eb5e64)
 
@@ -34,11 +32,9 @@ category: [(주)듀코젠 프로젝트]
 
 ## 스마트 팩토리: 가변 공정 전문가
 
-![img-description](/assets/Labkid4Images/Changer_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid4Images/Changer_2.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid4Images/Changer_3.png){: .right w="250" h="200"}
+| ![img-description](/assets/Labkid4Images/Changer_1.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid4Images/Changer_2.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid4Images/Changer_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 자동 활성/비활성 UI 툴팁                                     | 공정 수정 및 조합                                            | 설비 수리                                                    |
 
 [영상 링크](https://vimeo.com/487525549/14d0163f89)
 
@@ -49,11 +45,9 @@ category: [(주)듀코젠 프로젝트]
 
 ## 스마트 팩토리: 설비 제어 시스템 전문가
 
-![img-description](/assets/Labkid4Images/Equip_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid4Images/Equip_2.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid4Images/Equip_3.png){: .right w="250" h="200"}
+| ![img-description](/assets/Labkid4Images/Equip_1.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid4Images/Equip_2.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid4Images/Equip_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| NPC 로봇 수리                                                | 플레이어를 따라다니는 NPC                                    | NPC에게 명령                                                 |
 
 [영상 링크](https://vimeo.com/487525808/8ee4d8f2af)
 
