--- a/_posts/2022-08-14-랩키드 시즌5.md
+++ b/_posts/2022-08-14-랩키드 시즌5.md
@@ -19,11 +19,9 @@ category: [(주)듀코젠 프로젝트]
 
 ## Step1: 튜토리얼
 
-![img-description](/assets/Labkid5Images/STEP1.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid5Images/Step1_2.png){: .right w="250" h="200"}  
-
-![img-description](/assets/Labkid5Images/Step1_3.png){: .right w="250" h="200"}
+| ![img-description](/assets/Labkid5Images/STEP1.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid5Images/Step1_2.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid5Images/Step1_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 터치 튜토리얼                                                | 로테이션 튜토리얼                                            | 실시간 7각형 메쉬 생성                                       |
 
 [영상 링크](https://vimeo.com/705598962/2a4c913ce6)
 
@@ -34,11 +32,9 @@ category: [(주)듀코젠 프로젝트]
 
 ## Step4: 해부학 교실
 
-![img-description](/assets/Labkid5Images/Step4_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid5Images/Step4_2.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid5Images/Step4_3.png){: .right w="250" h="200"}
+| ![img-description](/assets/Labkid5Images/Step4_1.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid5Images/Step4_2.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid5Images/Step4_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| EXP 콘텐츠                                                   | 삼두근 관찰                                                  | 활동 메뉴판                                                  |
 
 [영상 링크](https://vimeo.com/725162608/54b6e3c2fe)
 
@@ -51,11 +47,9 @@ category: [(주)듀코젠 프로젝트]
 
 ## Step5-3: 무의식 환자 간호
 
-![img-description](/assets/Labkid5Images/Step5-3_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid5Images/Step5-3_2.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid5Images/Step5-3_3.png){: .right w="250" h="200"}
+| ![img-description](/assets/Labkid5Images/Step5-3_1.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid5Images/Step5-3_2.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid5Images/Step5-3_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 산소 마스크 씌우기                                           | 인공호흡기 장착                                              | 주사 바늘 놓기                                               |
 
 [영상 링크](https://vimeo.com/705598708/86e531fe6b)
 
@@ -67,11 +61,9 @@ category: [(주)듀코젠 프로젝트]
 
 ## Step5-7 다빈치 실습
 
-![img-description](/assets/Labkid5Images/Step5-7_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid5Images/Step5-7_2.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid5Images/Step5-7_3.png){: .right w="250" h="200"}
+| ![img-description](/assets/Labkid5Images/Step5-7_1.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid5Images/Step5-7_2.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid5Images/Step5-7_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 다빈치 로봇 탑승                                             | 로봇팔 도구 선택                                             | 포도알로 실습하기                                            |
 
 [영상 링크](https://vimeo.com/705598870/307c6ced65)
 
@@ -83,11 +75,9 @@ category: [(주)듀코젠 프로젝트]
 
 ## Step6 심장 이식 수술 실습
 
-![img-description](/assets/Labkid5Images/Step6_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid5Images/Step6_2.png){: .right w="250" h="200"}
-
-![img-description](/assets/Labkid5Images/Step6_3.png){: .right w="250" h="200"}
+| ![img-description](/assets/Labkid5Images/Step6_1.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid5Images/Step6_2.png){: .right w="250" h="200"} | ![img-description](/assets/Labkid5Images/Step6_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 다빈치 로봇 탑승 후                                          | 보조의에게 심장 제거 명령                                    | 로봇팔로 봉합하기                                            |
 
 [영상 링크](https://vimeo.com/705632302/c11cabe7eb)
 
