--- a/_posts/2022-08-14-충남학생안전체험관 교통안전 실감형 콘텐츠.md
+++ b/_posts/2022-08-14-충남학생안전체험관 교통안전 실감형 콘텐츠.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 충남학생안전체험관 차 밖 및 차 안 안전 콘텐츠(작성 중...)
+title: 충남학생안전체험관 차 밖 및 차 안 안전 콘텐츠
 date: 2022-08-09 22:30 +0900
 category: [(주)듀코젠 프로젝트]
 ---
@@ -15,4 +15,27 @@ category: [(주)듀코젠 프로젝트]
 - 모션 시트 플러그인 업데이트에 따른 콘텐츠 추가 확장
 - VR 차 밖 콘텐츠 개발
 
+## 모션 시트 어트랙션 콘텐츠
 
+| ![img-description](/assets/ChungnamImages/Att_1.png){: .right w="250" h="200"} | ![img-description](/assets/ChungnamImages/Att_2.png){: .right w="250" h="200"} | ![img-description](/assets/ChungnamImages/Att_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 콘텐츠 장면                                                  | 터치 모니터로 제어                                           | 자동 테스트 프로그램                                         |
+
+[영상 링크](https://vimeo.com/739905448/a67feee359)
+
+- 기존 개발된 콘텐츠 유지 보수 및 기능 추가
+- Python으로 테스트 프로그램 - 테스트 - 콘텐츠 실행 자동화
+
+  
+
+## VR 콘텐츠
+
+| ![img-description](/assets/ChungnamImages/VR_1.png){: .right w="250" h="200"} | ![img-description](/assets/ChungnamImages/VR_2.png){: .right w="250" h="200"} | ![img-description](/assets/ChungnamImages/VR_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 시작 화면                                                    | 안전벨트 미착용 사고                                         | 횡단 보도 스마트폰 주의                                      |
+
+[영상 링크](https://vimeo.com/739905222/7d98d3c013)
+
+- VR 콘텐츠 개발
+- 레벨 디자인, 씬 배치
+- 아바타 마스크를 적용한 입모양 움직임, 사고시 모션 적용
