--- a/_posts/2022-08-14-Hand Shot.md
+++ b/_posts/2022-08-14-Hand Shot.md
@@ -20,11 +20,9 @@ category: [개인 프로젝트]
 
 ## Hand Shot
 
-![img-description](/assets/HandShotImages/Game_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/HandShotImages/Game_2.png){: .right w="250" h="200"}
-
-![img-description](/assets/HandShotImages/Game_3.png){: .right w="250" h="200"}
+| ![img-description](/assets/HandShotImages/Game_1.png){: .right w="250" h="200"} | ![img-description](/assets/HandShotImages/Game_2.png){: .right w="250" h="200"} | ![img-description](/assets/HandShotImages/Game_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 시작 화면                                                    | 주먹 총알 발사                                               | V 총알 발사                                                  |
 
 [영상 링크](https://www.youtube.com/watch?v=Yzux3Kss9_8)
 
@@ -38,11 +36,9 @@ category: [개인 프로젝트]
 
 ### 1. 데이터 셋 구하기
 
-![img-description](/assets/HandShotImages/Data_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/HandShotImages/Data_2.png){: .right w="250" h="200"}
-
-![img-description](/assets/HandShotImages/Data_3.png){: .right w="250" h="200"}
+| ![img-description](/assets/HandShotImages/Data_1.png){: .right w="250" h="200"} | ![img-description](/assets/HandShotImages/Data_2.png){: .right w="250" h="200"} | ![img-description](/assets/HandShotImages/Data_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 직접 촬영한 손 이미지                                        | 다운로드된  손 이미지                                        | 다운로드된 손 이미지                                         |
 
 - 노트북의 웹캠을 이용한 주기적 사진 촬영 프로그램 작성, 다양한 데이터 셋을 위해 TV 다큐멘터리를 배경으로 직접 손 사진 촬영
   [소스 코드 링크](https://github.com/OverHeatHeart/PhotoTaker/blob/master/OpenCV_Practice/OpenCV_Practice/OpenCV_Practice.cpp)
@@ -54,9 +50,9 @@ category: [개인 프로젝트]
 
 ### 2. 레이블링 및 훈련시키기
 
-![img-description](/assets/HandShotImages/Train_1.png){: .right w="380" h="300"}
-
-![img-description](/assets/HandShotImages/Train_2.png){: .right w="380" h="300"}
+| ![img-description](/assets/HandShotImages/Train_1.png){: .right w="380" h="300"} | ![img-description](/assets/HandShotImages/Train_2.png){: .right w="380" h="300"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 레이블링                                                     | Average Loss Chart                                           |
 
 ​     
 
@@ -67,11 +63,9 @@ category: [개인 프로젝트]
 
 ### 3. 핸드 트래킹 및 총알 발사
 
-![img-description](/assets/HandShotImages/Shot_1.png){: .right w="250" h="200"}
-
-![img-description](/assets/HandShotImages/Shot_2.png){: .right w="250" h="200"}
-
-![img-description](/assets/HandShotImages/Shot_3.png){: .right w="250" h="200"}
+| ![img-description](/assets/HandShotImages/Shot_1.png){: .right w="250" h="200"} | ![img-description](/assets/HandShotImages/Shot_2.png){: .right w="250" h="200"} | ![img-description](/assets/HandShotImages/Shot_3.png){: .right w="250" h="200"} |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 주먹: 파란색 총알                                            | 검지: 빨간색 총알                                            | V: 초록색 총알                                               |
 
 - 주먹: 파란색 총알 발사
 - 검지: 빨간색 총알 발사
