--- a/_posts/2022-08-14-케디타운.md
+++ b/_posts/2022-08-14-케디타운.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2021, 2022 방송중·고 관계자 미래 교육 역량 강화 연수 KEDITOWN(작성중..)
+title: 2021, 2022 방송중·고 관계자 미래 교육 역량 강화 연수 KEDITOWN
 date: 2022-08-16 22:46 +0900
 category: [(주)듀코젠 프로젝트]
 ---
